# it8951-esp32

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  annotated.html  annotated_dup.js  class_i_t8951-members.html  class_i_t8951.html  class_i_t8951.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  idf_component.yml  index.html  it8951_8h.html  it8951_8h.js  it8951_8h_source.html  navtreedata.js  navtreeindex0.js  struct_i_t8951_area-members.html  struct_i_t8951_area.html  struct_i_t8951_area.js
.github/workflows/: build_examples_gc16.yml  build_examples_monochrome.yml
docs/: CMakeLists.txt  Doxyfile.in  build.bat
examples/gc16/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/gc16/main/: main.cpp
examples/monochrome/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/monochrome/main/: idf_component.yml  main.cpp
search/: all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  searchdata.js  variables_1.js
src/: .clang-format  it8951.cpp  support.h
src/include/: it8951.h
